Возвращение кнопки Сеть во вкладку настроек (#344)

--- a/Content.Client/Options/UI/OptionsMenu.xaml
+++ b/Content.Client/Options/UI/OptionsMenu.xaml
@@ -11,5 +11,6 @@
         <tabs:AccessibilityTab Name="AccessibilityTab" />
         <tabs:AdminOptionsTab Name="AdminOptionsTab" />
         <dtabs:DeltaTab Name="ExtraTab" /> <!-- Delta-V -->
+        <tabs:NetworkTab Name="NetworkTab" />
     </TabContainer>
 </DefaultWindow>
